# Sawa

./: .gitignore  README.md  RELEASE_NOTES.md  bitchat_research.md  btl-release.jks  build.gradle.kts  fix_bitchat.py  fix_crashes.py  fix_handle.py  fix_issues.py  fix_limits.py  keystore_base64.txt  patch_queue.sh  patch_service.py  phase2_refactor.py  scratch.kts  settings.gradle.kts
.github/workflows/: android_build_sign.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  btl_crypto.cpp
app/src/main/java/com/btl/protocol/: BtlApplication.kt
app/src/main/java/com/btl/protocol/data/crypto/: AndroidKeyStoreWrapper.kt  IdentityManager.kt  NoiseProtocolEngine.kt
app/src/main/java/com/btl/protocol/data/media/: ImageUtils.kt  VoiceRecorder.kt
app/src/main/java/com/btl/protocol/data/network/: BinaryProtocol.kt  BleFragmentation.kt  BtlMeshService.kt  GattOperationQueue.kt  GcsFilter.kt  ImageUtils.kt  PacketFragmenter.kt  PeerRegistry.kt
app/src/main/java/com/btl/protocol/di/: MeshModule.kt
app/src/main/java/com/btl/protocol/ui/: MainActivity.kt  MeshViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
scripts/: generate_release_key.sh
(+21 files in other folders)
